--- a/templates/home_not_logged_in.html
+++ b/templates/home_not_logged_in.html
@@ -21,7 +21,7 @@
   </div>
   <div class="home-buttons">
     <a href="/"> <button class="refresh-button">Refresh Selection</button></a>
-    <a href="/menuout"> <button class="menu-button">Check Out Our Menu</button> </a>
+    <a href="/menu"> <button class="menu-button">Check Out Our Menu</button> </a>
   </div>
 </div>
 {% endblock %}
