--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <ul class="topnav">
     {% if 'user'not in session %}
     <li><a class="active" href="/">Home</a></li>
-    <li><a href="/menuout">Menu</a></li>
+    <li><a href="/menu">Menu</a></li>
     <li><a href="/offers">Offers</a></li>
     {% else %}
     <li><a class="active" href="/">Home</a></li>
