--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -700,3 +700,12 @@ body.error-page {
 .order-now-button:hover {
   background-color: #028a5e;
 }
+
+.footer-basic {
+  text-align: center;
+  color: white;
+  padding: 3px;
+  background-color: rgb(3, 3, 3);
+  color: white;
+  text-decoration: none;
+}
