--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,9 +10,9 @@
         <footer> 
             <ul class="list-inline">
             <li class="list-inline-item"><a href="/">Home</a></li>
-                <li class="list-inline-item"><a href="/Offers">Offers</a></li>
-                <li class="list-inline-item"><a href="/Menu">Menu</a></li>
-                <li class="list-inline-item"><a href="/Stores">Contact</a></li> 
+                <li class="list-inline-item"><a href="/offers">Offers</a></li>
+                <li class="list-inline-item"><a href="/menu">Menu</a></li>
+                <li class="list-inline-item"><a href="/stores">Stores</a></li> 
 
             </ul> 
             <p class="copyright">Danial Ghobrial © 2024</p>
