--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,15 +5,15 @@
     <form action="/signup" method="post" class="auth-form">
         <div class="auth-form-group">
             <label for="username">Username</label>
-            <input type="text" maxlength="25" name="username" class="auth-form-input" required>
+            <input type="text"  minlength="5" maxlength="25" name="username" class="auth-form-input" required>
         </div>
         <div class="auth-form-group">
             <label for="password">Password</label>
-            <input type="password" name="password" class="auth-form-input" required>
+            <input type="text" minlength="5" name="password" class="auth-form-input" required>
         </div>
         <div class="auth-form-group">
             <label for="address">Address</label>
-            <input type="text" maxlength="50" name="address" class="auth-form-input" required>
+            <input type="text"  minlength="5" maxlength="50" name="address" class="auth-form-input" required>
         </div>
         <button type="submit" class="auth-form-button">Signup</button>
     </form>
