Added a your orders page

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,6 +8,7 @@
     <li><a href="/menu">Menu</a></li>
     <li><a href="/offers">Offers</a></li>
     <li><a href="/stores">Stores</a></li>
+    <li><a href="/your_orders">Your Orders</a></li>
     <li><a href="/logout">Log Out</a></li>
     <li class="right"><a href="/checkout"><img src="/static/Images/checkout.png" alt="checkout"></a></li>
     {% endif %}
