--- a/templates/yourorders.html
+++ b/templates/yourorders.html
@@ -1,4 +1,21 @@
 {% extends "layout.html" %}
+
 {% block content %}
-your orders
+<h2>Your Orders</h2>
+
+{% if orders %}
+    <ul>
+    {% for order in orders %}
+        <li>
+            Order ID: {{ order[0] }}<br>
+            Order Details: {{ order[2] }}<br>
+            Date: {{ order[3] }}<br>
+        </li>
+        <hr>
+    {% endfor %}
+    </ul>
+{% else %}
+    <p>You have no orders.</p>
+{% endif %}
+
 {% endblock %}
